--- a/package.json
+++ b/package.json
@@ -1,23 +1,22 @@
 {
   "name": "aion",
   "displayName": "Aion",
-  "description": "Aion language support. The language repository - https://github.com/aion-ics/aion (if not public, wait until it is)",
-  "version": "1.7.0",
+  "description": "Aion language support. The language repository - https://github.com/aionlang/aion (if not public, wait until it is)",
+  "version": "1.0.0",
   "engines": {
     "vscode": "^1.97.0"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/aion-ics/aion-vscode.git"
+    "url": "https://github.com/aionlang/aion-vscode.git"
   },
-  "publisher": "aion-dsl-support",
+  "publisher": "aionlangsupport",
   "categories": [
     "Programming Languages"
   ],
   "scripts": {
     "antlr4ts": "antlr4ts -visitor -o ./src/antlr/generated src/Aion.g4",
     "ex": "npm run antlr4ts && npm run compile",
-    "vscode:prepublish": "npm run compile",
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./"
   },
@@ -32,7 +31,6 @@
     "@types/vscode": "^1.87.0",
     "typescript": "^5.7.3"
   },
-  "main": "./out/extension.js",
   "dependencies": {
     "antlr4ts": "^0.5.0-alpha.4",
     "chalk": "^4.1.2"
